🐛 fix(AlertService): On mobile, the position of alert is incorrect

--- a/src/SwashbucklerDiary.Rcl/wwwroot/css/extend/masa-blazor-extend-enqueued-snackbars-write.css
+++ b/src/SwashbucklerDiary.Rcl/wwwroot/css/extend/masa-blazor-extend-enqueued-snackbars-write.css
@@ -1,5 +1,5 @@
 ﻿@media screen and (max-width:600px) {
     .m-enqueued-snackbars.m-enqueued-snackbars--bottom {
-        bottom: calc(1rem + 70px);
+        bottom: calc(1rem + var(--vditor-toolbar-height)) !important;
     }
 }
